--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 @import url(../demo/button1.css);
-
+@import url(agate.min.css);
 /*
 	Dimension by HTML5 UP
 	html5up.net | @ajlkn
