add xixi/no-xixi switch

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,8 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 @import url(../demo/button1.css);
+@import url(../demo/switch1.css);
+@import url(../demo/animation1.css);
 @import url(agate.min.css);
 /*
 	Dimension by HTML5 UP
