--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -467,7 +467,7 @@ input, select, textarea {
 		padding: 0.75rem 1rem;
 	}
 
-	input[type="checkbox"],
+	/* input[type="checkbox"], */
 	input[type="radio"] {
 		-moz-appearance: none;
 		-webkit-appearance: none;
@@ -481,7 +481,7 @@ input, select, textarea {
 		z-index: -1;
 	}
 
-		input[type="checkbox"] + label,
+		/* input[type="checkbox"] + label, */
 		input[type="radio"] + label {
 			text-decoration: none;
 			-moz-user-select: none;
@@ -499,7 +499,7 @@ input, select, textarea {
 			position: relative;
 		}
 
-			input[type="checkbox"] + label:before,
+			/* input[type="checkbox"] + label:before, */
 			input[type="radio"] + label:before {
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
@@ -513,7 +513,7 @@ input, select, textarea {
 				font-weight: 900;
 			}
 
-			input[type="checkbox"] + label:before,
+			/* input[type="checkbox"] + label:before, */
 			input[type="radio"] + label:before {
 				-moz-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 				-webkit-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
@@ -532,7 +532,7 @@ input, select, textarea {
 				width: 1.65rem;
 			}
 
-		input[type="checkbox"]:checked + label:before,
+		/* input[type="checkbox"]:checked + label:before, */
 		input[type="radio"]:checked + label:before {
 			background: #ffffff !important;
 			border-color: #ffffff !important;
@@ -540,16 +540,16 @@ input, select, textarea {
 			content: '\f00c';
 		}
 
-		input[type="checkbox"]:focus + label:before,
+		/* input[type="checkbox"]:focus + label:before, */
 		input[type="radio"]:focus + label:before {
 			background: rgba(255, 255, 255, 0.075);
 			border-color: #ffffff;
 			box-shadow: 0 0 0 1px #ffffff;
 		}
 
-	input[type="checkbox"] + label:before {
+	/* input[type="checkbox"] + label:before {
 		border-radius: 4px;
-	}
+	} */
 
 	input[type="radio"] + label:before {
 		border-radius: 100%;
