--- a/assets/demo/switch1.css
+++ b/assets/demo/switch1.css
@@ -1,30 +1,38 @@
 /* styles.css */
+:root {
+  --hue: 223;
+  --bg: hsl(var(--hue), 10%, 90%);
+  --fg: hsl(var(--hue), 10%, 10%);
+  --trans-dur: 0.5s;
+  --trans-timing1: cubic-bezier(0.65, 0, 0.35, 1);
+  --trans-timing2: cubic-bezier(0.65, 0, 0.35, 1.5);
+}
+
 .xixi__switch {
+  /* cursor: pointer; */
   display: flex;
   margin: auto;
+  justify-content: center;
 }
 
 .xixi__switch__wrapper {
   display: flex;
+  align-items: center;
   position: relative;
 }
 
+/* Styles for the switch input */
 .xixi__switch__input {
-  background-color: hsl(223, 10%, 80%);
-  border-radius: 0.75em;
-  box-shadow: 0.0625em 0.0625em 0.0625em white inset, 
-              -0.0625em -0.0625em 0.0625em hsl(223, 10%, 80%) inset,
-              0 0 0 0.125em hsl(223, 10%, 90%) inset, 
-              0.25em 0.25em 0.125em rgba(0, 0, 0, 0.3) inset,
-              0.0625em 0.0625em 0.0625em rgba(0, 0, 0, 0.3);
+  background-color: hsl(var(--hue), 10%, 80%);
+  border-radius: 24px;
+  box-shadow: 0.125em 0.125em 0.125em white inset, -0.125em -0.125em 0.125em hsl(var(--hue), 10%, 80%) inset, 0 0 0 0.25em hsl(var(--hue), 10%, 90%) inset, 0.5em 0.5em 0.25em rgba(0, 0, 0, 0.3) inset, 0.0625em 0.125em 0.125em rgba(0, 0, 0, 0.3);
   cursor: pointer;
   display: block;
-  width: 2.5em;
-  height: 1.5em;
+  width: 100px;
+  height: 50px;
   -webkit-appearance: none;
   appearance: none;
-  transition: background-color 0.5s cubic-bezier(0.65, 0, 0.35, 1),
-              box-shadow 0.5s cubic-bezier(0.65, 0, 0.35, 1);
+  transition: background-color var(--trans-dur) var(--trans-timing1), box-shadow var(--trans-dur) var(--trans-timing1);
 }
 
 .xixi__switch__input:checked {
@@ -32,17 +40,103 @@
 }
 
 .xixi__switch__emoji {
-  box-shadow: 0.25em 0.25em 0.125em rgba(0, 0, 0, 0.3);
+  box-shadow: 0.5em 0.5em 0.25em rgba(0, 0, 0, 0.3);
   overflow: hidden;
   pointer-events: none;
-  top: 0.25em;
-  left: 0.25em;
-  width: 1em;
-  height: 1em;
+  /* align-items: center; */
+  left: 0.75em;
+  top: 0.5em;
+  width: 35px;
+  height: 35px;
+}
+
+[dir='rtl'] .xixi__switch__emoji {
+  right: 1em;
+  left: auto;
+}
+
+.xixi__switch__emoji,
+.xixi__switch__emoji:before,
+.xixi__switch__emoji:after,
+.xixi__switch__emoji-eye,
+.xixi__switch__emoji-mouth,
+.xixi__switch__emoji-face {
+  display: block;
   position: absolute;
 }
 
-.xixi__switch__emoji__face {
+.xixi__switch__emoji,
+.xixi__switch__emoji:before,
+.xixi__switch__emoji:after,
+.xixi__switch__emoji-eye,
+.xixi__switch__emoji-mouth {
+  border-radius: 50%;
+}
+
+.xixi__switch__emoji:before,
+.xixi__switch__emoji:after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  transform: translateZ(0);
+}
+
+.xixi__switch__emoji:before {
+  background-color: #f2c40d;
+  box-shadow: -1em -1em 1em #c29d0a inset,
+              0.75em 0.75em 1em #f9e286 inset;
+}
+
+.xixi__switch__emoji:after {
+  box-shadow: 0 0 0.25em 0.125em rgba(245, 208, 61, 0.5) inset;
+}
+
+.xixi__switch__emoji,
+.xixi__switch__emoji-face {
+  transform-style: preserve-3d;
+  transition: transform var(--trans-dur) var(--trans-timing2);
+}
+
+.xixi__switch__emoji-eye,
+.xixi__switch__emoji-mouth {
+  backface-visibility: hidden;
+}
+
+.xixi__switch__emoji-eye {
+  border: 0.125em solid hsl(var(--hue), 10%, 10%);
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  top: 45%;
+  left: 40%;
+  width: 8px;
+  height: 8px;
+  transform: translate(-50%, -50%) rotateY(-22.5deg) translateZ(0.5em)
+             rotateZ(45deg);
+}
+
+.xixi__switch__emoji-eye + .xixi__switch__emoji-eye {
+  left: 60%;
+  transform: translate(-50%, -50%) rotateY(22.5deg) translateZ(0.5em)
+             rotateZ(45deg);
+}
+
+.xixi__switch__emoji-mouth {
+  background-image: radial-gradient(
+    100% 100% at 50% 100%, #f2180d 20%, #f5463d 33%, rgba(245, 70, 61, 0) 35%
+  ), radial-gradient(
+    100% 100% at 75% 113%, black 26%, rgba(0, 0, 0, 0) 35%
+  ), linear-gradient(
+    rgba(0, 0, 0, 0) 50%, black 50% 55%, hsl(var(--hue), 10%, 10%) 65%
+  );
+  top: 55%;
+  left: 50%;
+  width: 15px;
+  height: 15px;
+  transform: translate(-50%, -50%) rotateX(-15deg) translateZ(0.5em);
+}
+
+.xixi__switch__emoji-face {
   top: 0;
   left: 0;
   width: 100%;
@@ -50,35 +144,82 @@
   transform: rotateY(0);
 }
 
-.xixi__switch__emoji__face + .xixi__switch__emoji__face {
+.xixi__switch__emoji-face + .xixi__switch__emoji-face {
   transform: rotateY(-180deg);
 }
 
-.xixi__switch__emoji__eye {
-  border: 0.0625em solid hsl(223, 10%, 10%);
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  top: 50%;
-  left: 50%;
-  width: 0.25em;
-  height: 0.25em;
-  transform: translate(-50%, -50%) rotateY(-22.5deg) translateZ(0.5em) rotateZ(45deg);
+.xixi__switch__emoji-face--sad .xixi__switch__emoji-eye {
+  background-color: hsl(var(--hue), 10%, 10%);
+  border: 0;
+  width: 8px;
+  height: 8px;
 }
 
-.xixi__switch__emoji__eye + .xixi__switch__emoji__eye {
-  transform: translate(-50%, -50%) rotateY(22.5deg) translateZ(0.5em) rotateZ(45deg);
+.xixi__switch__input,
+.xixi__switch__label {
+  -webkit-tap-highlight-color: transparent;
 }
 
-.xixi__switch__emoji__mouth {
-  background-image: radial-gradient(100% 100% at 50% 100%, #f2180d 20%, #f5463d 33%, rgba(245, 70, 61, 0) 35%),
-                    radial-gradient(100% 100% at 75% 113%, black 26%, rgba(0, 0, 0, 0) 35%),
-                    linear-gradient(rgba(0, 0, 0, 0) 50%, black 50% 55%, hsl(223, 10%, 10%) 65%);
-  top: 50%;
+.xixi__switch__emoji-face--sad .xixi__switch__emoji-mouth {
+  background-image: none;
+  border: 0.125em solid transparent;
+  border-top-color: hsl(var(--hue), 10%, 10%);
+  width: 15px;
+  height: 15px;
+  top: 60%;
   left: 50%;
-  width: 0.5em;
-  height: 0.5em;
-  transform: translate(-50%, -50%) rotateX(-15deg) translateZ(0.5em);
+  transform: translate(-50%, 0) rotateX(-20deg) translateZ(0.5em);
+}
+
+.xixi__switch__input {
+  background-color: hsl(var(--hue), 10%, 80%);
+  border-radius: 24px;
+  box-shadow: 0.125em 0.125em 0.125em white inset,
+              -0.125em -0.125em 0.125em hsl(var(--hue), 10%, 80%) inset,
+              0 0 0 0.25em hsl(var(--hue), 10%, 90%) inset,
+              0.5em 0.5em 0.25em rgba(0, 0, 0, 0.3) inset,
+              0.125em 0.125em 0.125em rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  display: block;
+  width: 100px;
+  height: 50px;
+  -webkit-appearance: none;
+  appearance: none;
+  transition: background-color var(--trans-dur) var(--trans-timing1),
+              box-shadow var(--trans-dur) var(--trans-timing1);
+}
+
+.xixi__switch__input:checked {
+  background-color: #0ac213;
+}
+
+.xixi__switch__input:checked + .xixi__switch__emoji {
+  transform: translateX(130%);
+}
+
+[dir='rtl'] .xixi__switch__input:checked + .xixi__switch__emoji {
+  transform: translateX(-130%);
+}
+
+.xixi__switch__input:checked + .xixi__switch__emoji .xixi__switch__emoji-face {
+  transform: rotateY(179.99deg);
+}
+
+[dir='rtl'] .xixi__switch__input:checked + .xixi__switch__emoji .xixi__switch__emoji-face {
+  transform: rotateY(-179.99deg);
+}
+
+.xixi__switch__input:checked + .xixi__switch__emoji .xixi__switch__emoji-face + .xixi__switch__emoji-face {
+  transform: rotateY(0);
+}
+
+[dir='rtl'] .xixi__switch__input:checked + .xixi__switch__emoji .xixi__switch__emoji-face + .xixi__switch__emoji-face {
+  transform: rotateY(-360deg);
+}
+
+.xixi__switch__label,
+.xixi__switch__wrapper {
+  display: block;
 }
 
 .xixi__switch__label {
@@ -95,14 +236,15 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bg: hsl(223, 10%, 10%);
-    --fg: hsl(223, 10%, 90%);
+    --bg: hsl(var(--hue), 10%, 10%);
+    --fg: hsl(var(--hue), 10%, 90%);
   }
+
   .xixi__switch__input {
-    background-color: hsl(223, 10%, 20%);
-    box-shadow: 0.0625em 0.0625em 0.0625em hsl(223, 10%, 25%) inset, 
-                -0.0625em -0.0625em 0.0625em hsl(223, 10%, 20%) inset,
-                0 0 0 0.125em hsl(223, 10%, 30%) inset,
+    background-color: hsl(var(--hue), 10%, 20%);
+    box-shadow: 0.0625em 0.0625em 0.0625em hsl(var(--hue), 10%, 25%) inset,
+                -0.0625em -0.0625em 0.0625em hsl(var(--hue), 10%, 20%) inset,
+                0 0 0 0.125em hsl(var(--hue), 10%, 30%) inset,
                 0.25em 0.25em 0.125em rgba(0, 0, 0, 0.3) inset,
                 0.0625em 0.0625em 0.0625em rgba(0, 0, 0, 0.3);
   }
