--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1667,7 +1667,9 @@ input, select, textarea {
 	table-layout: fixed;
 	width: 100%;
 }
-
+.module-demo tr {
+	height: 50vh;
+}
 .module-demo td:first-child {
 	width: 20em;
 	word-wrap: break-word; /* 处理超长内容 */
