--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1674,3 +1674,14 @@ input, select, textarea {
 	width: 20em;
 	word-wrap: break-word; /* 处理超长内容 */
 }
+.my-table td {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	max-height: 10vh;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	border: 1px solid #ccc;
+}
