--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1679,9 +1679,8 @@ input, select, textarea {
 	align-items: center;
 	justify-content: center;
 	height: 100%;
-	max-height: 10vh;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+	max-height: 50vh;
+	overflow: auto;
+	/* text-overflow: ellipsis; */
 	border: 1px solid #ccc;
 }
