Fixed the height of tr in the technical page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1675,7 +1675,7 @@ input, select, textarea {
 	word-wrap: break-word; /* 处理超长内容 */
 }
 .my-table td {
-	display: flex;
+	/* display: flex; */
 	align-items: center;
 	justify-content: center;
 	height: 100%;
