--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1680,5 +1680,8 @@ input, select, textarea {
 	height: 100%;
 	max-height: 50vh;
 	overflow: auto;
-	/* text-overflow: ellipsis; */
 }
+.module-demo pre, .module-demo code {
+	overflow: auto; /* 显示滚动条 */
+	max-height: 100%; /* 限制最大高度为单元格高度 */
+  }
