--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1675,6 +1675,7 @@ input, select, textarea {
 	word-wrap: break-word; /* 处理超长内容 */
 }
 .module-demo td {
+	display: block;
 	align-items: center;
 	justify-content: center;
 	height: 100%;
