--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1669,12 +1669,14 @@ input, select, textarea {
 }
 .module-demo tr:not(:first-child) {
 	height: 50vh;
+	display: block;
 }
 .module-demo td:first-child {
 	width: 20em;
 	word-wrap: break-word; /* 处理超长内容 */
 }
 .module-demo td {
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	height: 100%;
@@ -1684,4 +1686,4 @@ input, select, textarea {
 .module-demo pre, .module-demo code {
 	overflow: auto; /* 显示滚动条 */
 	max-height: 100%; /* 限制最大高度为单元格高度 */
-  }
+}
