Fixed the height of tr in the technical page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1677,6 +1677,7 @@ input, select, textarea {
 .module-demo td {
 	align-items: center;
 	justify-content: center;
+	height: 50vh;
 	max-height: 50vh;
 	overflow: auto;
 }
