--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1674,7 +1674,7 @@ input, select, textarea {
 	width: 20em;
 	word-wrap: break-word; /* 处理超长内容 */
 }
-.module-demo td {
+.module-demo div {
 	align-items: center;
 	justify-content: center;
 	max-height: 50vh;
