Add 'ghost' 's css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
 @import url(../demo/button1.css);
 @import url(../demo/switch1.css);
 /* @import url(../demo/animation1.css); */
+@import url(../demo/ghost.css);
 @import url(agate.min.css);
 /*
 	Dimension by HTML5 UP
